make sure license attribution is displayed and fix spacing inside license attribution

--- a/src/client/components/license/licenseAttribution.css
+++ b/src/client/components/license/licenseAttribution.css
@@ -1,7 +1,7 @@
 .license-attribution {
     text-align: center;
     font-size: 70%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     right: 0;
   }
